tests/golden/demo/manifests/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    k8ify.service: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      k8ify.service: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8ify.service: mongo
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: mongo-env
        image: mongo:4.0
        name: mongo
        ports:
        - containerPort: 27017
        resources: {}
        volumeMounts:
        - mountPath: /data/db
          name: mongodb-data
      restartPolicy: Always
      volumes:
      - name: mongodb-data
        persistentVolumeClaim:
          claimName: mongodb-data
status: {}
