tests/golden/demo/manifests/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    helloWorld: Hello World!
    k8up.io/file-extension: defaultvalue
  creationTimestamp: null
  labels:
    k8ify.service: mongo
  name: mongo
spec:
  ports:
  - name: "27017"
    port: 27017
    targetPort: 27017
  selector:
    k8ify.service: mongo
status:
  loadBalancer: {}
