tests/golden/demo/manifests/portal-mpi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    k8ify.ref-slug: mpi
    k8ify.service: portal
  name: portal-mpi
spec:
  replicas: 1
  selector:
    matchLabels:
      k8ify.ref-slug: mpi
      k8ify.service: portal
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8ify.ref-slug: mpi
        k8ify.service: portal
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: portal-mpi-env
        image: image-registry.openshift-image-registry.svc:5000/portal/portal:latest
        name: portal-mpi
        ports:
        - containerPort: 8000
        - containerPort: 9000
        resources: {}
        volumeMounts:
        - mountPath: /src
          name: portal-mpi-claim0
      restartPolicy: Always
      volumes:
      - name: portal-mpi-claim0
        persistentVolumeClaim:
          claimName: portal-mpi-claim0
status: {}
