tests/golden/demo/manifests/portal-mpi-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    k8ify.ref-slug: mpi
    k8ify.service: portal
  name: portal-mpi
spec:
  ports:
  - name: "8001"
    port: 8001
    targetPort: 8000
  - name: "9001"
    port: 9001
    targetPort: 9000
  selector:
    k8ify.ref-slug: mpi
    k8ify.service: portal
status:
  loadBalancer: {}
