tests/golden/demo/manifests/portal-oasp-8001-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  creationTimestamp: null
  labels:
    k8ify.ref-slug: oasp
    k8ify.service: portal
  name: portal-oasp-8001
spec:
  rules:
  - host: portal-k8ify.apps.cloudscale-lpg-2.appuio.cloud
    http:
      paths:
      - backend:
          service:
            name: portal-oasp
            port:
              number: 8001
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - portal-k8ify.apps.cloudscale-lpg-2.appuio.cloud
    secretName: portal-oasp-8001-tls
status:
  loadBalancer: {}
