tests/golden/demo/manifests/portal-oasp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    k8ify.ref-slug: oasp
    k8ify.service: portal
  name: portal-oasp
spec:
  replicas: 2
  selector:
    matchLabels:
      k8ify.ref-slug: oasp
      k8ify.service: portal
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8ify.ref-slug: oasp
        k8ify.service: portal
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: k8ify.service
                operator: In
                values:
                - portal
            topologyKey: kubernetes.io/hostname
      containers:
      - args:
        - Hello World
        - and hi k8ify!
        command:
        - echo
        envFrom:
        - secretRef:
            name: portal-oasp-env
        image: image-registry.openshift-image-registry.svc:5000/portal/portal:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health/alive
            port: 9000
            scheme: HTTP
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 60
        name: portal-oasp
        ports:
        - containerPort: 9000
        - containerPort: 8000
        readinessProbe:
          failureThreshold: 4
          httpGet:
            path: /health/ready
            port: 9000
            scheme: HTTPS
          initialDelaySeconds: 5
          periodSeconds: 31
          successThreshold: 2
          timeoutSeconds: 59
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 2Gi
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /health/started
            port: 9000
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 60
      restartPolicy: Always
      serviceAccountName: portalk8saccess
status: {}
