tests/golden/demo/manifests/portal-oasp-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    k8ify.ref-slug: oasp
    k8ify.service: portal
  name: portal-oasp
spec:
  ports:
  - name: "9001"
    port: 9001
    targetPort: 9000
  - name: "8001"
    port: 8001
    targetPort: 8000
  selector:
    k8ify.ref-slug: oasp
    k8ify.service: portal
status:
  loadBalancer: {}
